// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PaymentRow/> renders the row correctly for status FAILED 1`] = `
<tr>
  <td>
    <div>
      <b>
        <a
          onClick={[Function]}
          style={Object {}}
        >
          John
           
          Doe
        </a>
      </b>
       (
      <a
        href="tel:1234567890"
      >
        1234567890
      </a>
      )
    </div>
  </td>
  <td>
    28th Jun 2021
  </td>
  <td>
    28th Jun 2021
  </td>
  <td>
    7th Aug 2021
  </td>
  <td
    className="text-right"
  >
    <big>
      ₹ 
      600
    </big>
  </td>
  <td>
    <span
      className="label label-danger2"
      style={
        Object {
          "fontSize": "100%",
        }
      }
    >
      Failed
    </span>
  </td>
  <td>
     
    
  </td>
</tr>
`;

exports[`<PaymentRow/> renders the row correctly for status PAID 1`] = `
<tr>
  <td>
    <div>
      <b>
        <a
          onClick={[Function]}
          style={Object {}}
        >
          John
           
          Doe
        </a>
      </b>
       (
      <a
        href="tel:1234567890"
      >
        1234567890
      </a>
      )
    </div>
  </td>
  <td>
    28th Jun 2021
  </td>
  <td>
    28th Jun 2021
  </td>
  <td>
    7th Aug 2021
  </td>
  <td
    className="text-right"
  >
    <big>
      ₹ 
      600
    </big>
  </td>
  <td>
    <span
      className="label label-success"
      style={
        Object {
          "fontSize": "100%",
        }
      }
    >
      Paid
    </span>
  </td>
  <td>
    <button
      className="btn btn-default"
      onClick={[Function]}
      type="button"
    >
      Fail
    </button>
     
    
  </td>
</tr>
`;

exports[`<PaymentRow/> renders the row correctly for status PENDING 1`] = `
<tr>
  <td>
    <div>
      <b>
        <a
          onClick={[Function]}
          style={Object {}}
        >
          John
           
          Doe
        </a>
      </b>
       (
      <a
        href="tel:1234567890"
      >
        1234567890
      </a>
      )
    </div>
  </td>
  <td>
    28th Jun 2021
  </td>
  <td>
    28th Jun 2021
  </td>
  <td>
    7th Aug 2021
  </td>
  <td
    className="text-right"
  >
    <big>
      ₹ 
      600
    </big>
  </td>
  <td>
    <span
      className="label label-danger"
      style={
        Object {
          "fontSize": "100%",
        }
      }
    >
      Pending
    </span>
  </td>
  <td>
    <button
      className="btn btn-default"
      onClick={[Function]}
      type="button"
    >
      Pay
    </button>
     
    
  </td>
</tr>
`;
